objects/disco__Mobile_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores settings from the mobile admin page</description>
    <fields>
        <fullName>disco__Card_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Card Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Check_In_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check In Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Check_In_Relationship__c</fullName>
        <label>Check In Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Distance_Tracking_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distance Tracking Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Distance_Tracking_Field__c</fullName>
        <label>Distance Tracking Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Form_Sorting_Field__c</fullName>
        <label>Form Sorting Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Form_Sorting_Order__c</fullName>
        <label>Form Sorting Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Alert_Background_Color__c</fullName>
        <description>Mobile Branding - Alert background color</description>
        <inlineHelpText>Mobile Branding - Alert background color, for example #1010FF</inlineHelpText>
        <label>MB Alert Background Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Alert_Font_Color__c</fullName>
        <description>Mobile Branding - alert font color</description>
        <inlineHelpText>Mobile Branding - alert font color, for example #7FFF00</inlineHelpText>
        <label>MB Alert Font Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Card_Background_Color__c</fullName>
        <description>Mobile Branding - card background color</description>
        <inlineHelpText>Mobile Branding - card background color, for example #003A5C</inlineHelpText>
        <label>MB Card Background Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Card_Primary_Font_Color__c</fullName>
        <description>Mobile Branding - Card primary font color</description>
        <inlineHelpText>Mobile Branding - Card primary font color, for example #0A000A</inlineHelpText>
        <label>MB Card Primary Font Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Card_Secondary_Font_Color__c</fullName>
        <description>Mobile Branding - Card secondary font color</description>
        <inlineHelpText>Mobile Branding - Card secondary font color, for example #0F0F0F</inlineHelpText>
        <label>MB Card Secondary Font Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Check_In_Background_Color__c</fullName>
        <description>Mobile Branding - Check in dialog background color</description>
        <inlineHelpText>Mobile Branding - Check in dialog background color, for example #00007A</inlineHelpText>
        <label>MB Check In Background Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Check_In_Button_Color__c</fullName>
        <description>Mobile Branding - Check in button color</description>
        <inlineHelpText>Mobile Branding - Check in button color, for example #7F7F7F</inlineHelpText>
        <label>MB Check In Button Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Check_In_Font_Color__c</fullName>
        <description>Mobile Branding - Check In dialog font color</description>
        <inlineHelpText>Mobile Branding - Check In dialog font color, for example #007F7F</inlineHelpText>
        <label>MB Check In Font Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Distance_Font_Color__c</fullName>
        <description>Mobile Branding - distance font color</description>
        <inlineHelpText>Mobile Branding - distance font color, for example #00C0BF</inlineHelpText>
        <label>MB Distance Font Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Distance_Icon_Background_Color__c</fullName>
        <description>Mobile Branding - Distance icon background color</description>
        <inlineHelpText>Mobile Branding - Distance icon background color, for example #00A000</inlineHelpText>
        <label>MB Distance Icon Background Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Distance_Icon_Foreground_Color__c</fullName>
        <description>Mobile Branding - Distance icon foreground color</description>
        <inlineHelpText>Mobile Branding - Distance icon foreground color, for example #10FFA0</inlineHelpText>
        <label>MB Distance Icon Foreground Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Form_Card_Background_Color__c</fullName>
        <description>Mobile Branding - Form card background color</description>
        <inlineHelpText>Mobile Branding - Form card background color, for example #0F0F0F</inlineHelpText>
        <label>MB Form Card Background Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Form_Card_Primary_Font_Color__c</fullName>
        <description>Mobile Branding - Form card primary font color</description>
        <inlineHelpText>Mobile Branding - Form card primary font color, for example #0F0F0F</inlineHelpText>
        <label>MB Form Card Primary Font Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Form_Card_Secondary_Font_Color__c</fullName>
        <description>Mobile Branding - Form card secondary font color</description>
        <inlineHelpText>MB Form card secondary font color, for example #6F6F6F</inlineHelpText>
        <label>MB Form Card Secondary Font Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Header_Footer_Background_Color__c</fullName>
        <description>Mobile Branding - Header/Footer background color</description>
        <inlineHelpText>Mobile Branding - Header/Footer background color, for example #000A4F</inlineHelpText>
        <label>MB Header/Footer Background Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Header_Footer_Font_Color__c</fullName>
        <description>Mobile Branding - Header/Footer font color</description>
        <inlineHelpText>Mobile Branding - Header/Footer font color, for example #7FC0C0</inlineHelpText>
        <label>MB Header/Footer Font Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Logo_Document_Id__c</fullName>
        <description>Mobile Branding - Document Id for logo. It should be less than 1MB</description>
        <inlineHelpText>Mobile Branding - Document Id for logo. It should be less than 1MB</inlineHelpText>
        <label>MB Logo Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Mobile_Background_Color__c</fullName>
        <description>Mobile Branding - main background color</description>
        <inlineHelpText>Mobile Branding - main background color, for example #1010D0</inlineHelpText>
        <label>MB Mobile Background Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_Navigation_Font_Color__c</fullName>
        <description>Mobile branding - Navigation font color</description>
        <inlineHelpText>Mobile branding - Navigation font color, for example #0A0A0A</inlineHelpText>
        <label>MB Navigation Font Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_New_Form_Background_Color__c</fullName>
        <description>Mobile Branding - New form dialog background color</description>
        <inlineHelpText>Mobile Branding - New form dialog background color, for example #7F7F7F</inlineHelpText>
        <label>MB New Form Background Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__MB_New_Form_Foreground_Color__c</fullName>
        <description>Mobile Branding - New Form dialog foreground color</description>
        <inlineHelpText>Mobile Branding - New Form dialog foreground color, for example #A0A0A0</inlineHelpText>
        <label>MB New Form Foreground Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Primary_Object_Filter__c</fullName>
        <label>Primary Object Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Primary_Object_Relationship__c</fullName>
        <label>Primary Object Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Primary_Object_Sorting_Order__c</fullName>
        <label>Primary Object Sorting Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Primary_Object_Sorting__c</fullName>
        <label>Primary Object Sorting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Primary_Object__c</fullName>
        <label>Primary Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Summary_Fieldset__c</fullName>
        <label>Summary Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Mobile Config</label>
</CustomObject>